src/test/deca/context/valid/sansObjet/InitializationCompilationWithBool.deca
{
    boolean a = true;
    boolean b = false;
    boolean c =a&&b;
    boolean d = true || false;
    boolean e = b;
}