src/test/deca/context/invalid/sansObjet/BadUseOfOrWithFloat.deca
{
    float x;
    x = true || false;
}